# databot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.app.txt  requirements.dev.txt  requirements.txt
app/: main.py
src/: agent.py  main.py
tests/artifacts/: test_agent_returns_expected_artifacts.py
tests/dataframe/: test_agent_returns_expected_artifacts.py  test_agent_returns_expected_dataframe.py
