[tool.poetry]
name = "databot"
version = "0.1.0"
description = "A LangGraph agent for data analysis."
authors = ["Aleksei Solovev"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.3.21"
langchain-google-genai = "^2.1.3"
langfuse = "^3.0.0"
langgraph = "^0.3.30"
langgraph-checkpoint-sqlite = "^2.0.6"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
streamlit = "^1.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
