[tool.poetry]
name = "databot"
version = "0.1.0"
description = "A LangGraph agent for data analysis."
authors = ["Aleksei Solovev"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain-community = "^0.3.27"
langchain-google-genai = "^2.1.8"
langfuse = "^3.2.1"
langgraph = "^0.5.4"
langgraph-checkpoint-sqlite = "^2.0.11"
matplotlib = "^3.10.3"
pandas = "^2.3.1"
seaborn = "^0.13.2"
streamlit = "^1.47.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
